--- a/hok.html
+++ b/hok.html
@@ -7,7 +7,7 @@
     <title>hokharmony</title>
     <!-- css menüsüne geçirilecek-->
     <link rel="stylesheet" href="/style.css">    
-   <!-- javasceipt menüsüne geçirilecek-->
+   <!-- javascript menüsüne geçirilecek-->
     <script src="/script.js" defer></script>
   </head>  
   <body>
