--- a/hok.html
+++ b/hok.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <title>hokharmony</title>
-    <!-- css menüsüne geçirilecek-->
-    <link rel="stylesheet" href="/style.css">    
-   <!-- javascript menüsüne geçirilecek-->
-    <script src="/script.js" defer></script>
+    <!-- hok.css -->
+    <link rel="stylesheet" href="/hok.css">    
+    <!-- hok.js -->
+    <script src="/hok.js" defer></script>
   </head>  
   <body>
     <h1>hokharmony</h1>
