--- a/hok.html
+++ b/hok.html
@@ -11,6 +11,9 @@
     <script src="/hok.js" defer></script>
   </head>  
   <body>
+    <hr> <center>
+    hokharmony
+    <hr> </center>
     <h1>hokharmony</h1>
     <h2>hokharmony</h2>
     <h3>hokharmony</h3>
